--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "node-sass": "^4.13.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
